--- a/Practica2/src/main/resources/static/index.html
+++ b/Practica2/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="author" content="Diego,Javier,Alvaro" />
+        <meta name="author" content="Diego,Javier,Álvaro" />
         <title>Practica 2</title>
         <!-- Fuentes-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -12,20 +12,32 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"  integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
         <!-- CSS -->
-        <link href="css/styles.css" rel="stylesheet" />
-        
-    </head>
-    <body id="page-top">
-        
-        <!-- Footer -->
-		  <footer class="footer">
-		    <div class="container">
-		      <div class="row align-items-center">
-		        <div class="col-md-4">
-		          <span class="">Sistemas distribuidos URJC </span>
-		        </div>
-		      </div>
-		    </div>
-		  </footer>
-    </body>
+        <link href="./css/styles.css" rel="stylesheet" />
+        <!-- Scripts -->
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="./JavaScript/ControladorArbol.js"></script>
+</head>
+<body>
+		<ul id="ArbolLista">
+		  <li><span class="caret caret-arrow-down">Cultivos</span>
+		    <ul class="nested">
+		      <li>Dentro de cultivos</li>
+		      <li>Dentro de cultivos</li>
+		      <li><span class="caret caret-arrow-down">Especies</span>
+		        <ul class="nested">
+		          <li>Dentro de especies</li>
+		          <li>Dentro de cultivos</li>
+		          <li><span class="caret caret-arrow-down">Productos</span>
+		            <ul class="nested">
+		              <li>Dentro de productos</li>
+		              <li>Dentro de productos</li>
+		              <li>Dentro de productos</li>
+		            </ul>
+		          </li>
+		        </ul>
+		      </li>
+		    </ul>
+		  </li>
+		</ul>
+	</body>
 </html>
