--- a/Practica2/src/main/resources/static/index.html
+++ b/Practica2/src/main/resources/static/index.html
@@ -15,19 +15,21 @@
         <link href="./css/styles.css" rel="stylesheet" />
         <!-- Scripts -->
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="./JavaScript/getCultivos.js"></script>
         <script src="./JavaScript/ControladorArbol.js"></script>
+        <script src="./JavaScript/getEspecies.js"></script>
 </head>
 <body>
 		<ul id="ArbolLista">
-		  <li><span class="caret caret-arrow-down">Cultivos</span>
+			<!-- <li><span class="cultivos caret caret-arrow-down">Cultivos</span>
 		    <ul class="nested">
 		      <li>Dentro de cultivos</li>
 		      <li>Dentro de cultivos</li>
-		      <li><span class="caret caret-arrow-down">Especies</span>
+		      <li><span class="especies caret caret-arrow-down" >Especies</span>
 		        <ul class="nested">
 		          <li>Dentro de especies</li>
 		          <li>Dentro de cultivos</li>
-		          <li><span class="caret caret-arrow-down">Productos</span>
+		          <li><span class="productos caret caret-arrow-down">Productos</span>
 		            <ul class="nested">
 		              <li>Dentro de productos</li>
 		              <li>Dentro de productos</li>
@@ -36,8 +38,7 @@
 		          </li>
 		        </ul>
 		      </li>
-		    </ul>
-		  </li>
+		    </ul> -->		  
 		</ul>
 	</body>
 </html>
