--- a/Practica2/src/main/resources/static/index.html
+++ b/Practica2/src/main/resources/static/index.html
@@ -9,36 +9,24 @@
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"  integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
         <!-- CSS -->
         <link href="./css/styles.css" rel="stylesheet" />
         <!-- Scripts -->
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="./JavaScript/getCultivos.js"></script>
-        <script src="./JavaScript/ControladorArbol.js"></script>
+        <script src="./JavaScript/getProductos.js"></script>
+        <script src="./JavaScript/getSustancias.js"></script>
+        <script src="./JavaScript/getPlagas.js"></script>
         <script src="./JavaScript/getEspecies.js"></script>
+        <script src="./JavaScript/getCultivos.js"></script>
 </head>
 <body>
-		<ul id="ArbolLista">
-			<!-- <li><span class="cultivos caret caret-arrow-down">Cultivos</span>
-		    <ul class="nested">
-		      <li>Dentro de cultivos</li>
-		      <li>Dentro de cultivos</li>
-		      <li><span class="especies caret caret-arrow-down" >Especies</span>
-		        <ul class="nested">
-		          <li>Dentro de especies</li>
-		          <li>Dentro de cultivos</li>
-		          <li><span class="productos caret caret-arrow-down">Productos</span>
-		            <ul class="nested">
-		              <li>Dentro de productos</li>
-		              <li>Dentro de productos</li>
-		              <li>Dentro de productos</li>
-		            </ul>
-		          </li>
-		        </ul>
-		      </li>
-		    </ul> -->		  
+	<div class="container">
+		<ul id="ArbolLista" class="list-group">
 		</ul>
+	</div>
+		
 	</body>
 </html>
