--- a/Practica2/src/main/resources/static/index.html
+++ b/Practica2/src/main/resources/static/index.html
@@ -16,6 +16,7 @@
         <link href="./css/styles.css" rel="stylesheet" />
         <!-- Scripts -->
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+		<script src="./JavaScript/easyTooltip.min.js"></script>
         <script src="./JavaScript/getProductos.js"></script>
         <script src="./JavaScript/getSustancias.js"></script>
         <script src="./JavaScript/getPlagas.js"></script>
